<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="413dp"
        android:layout_height="39dp"
        android:background="#FF9800"
        android:text="Examen de Admisión 2023"
        android:textAlignment="center"
        android:textColor="#FAFAFA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNombreApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/txtNombreApellido"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/fieldApellidoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/fieldApellidoNombre"
        android:textColor="#F8F4F4"
        android:textColorHint="#F8F8F8"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/txtNombreApellido"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreApellido" />

    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtCorreo"
        android:textColor="#FAF7F7"
        app:layout_constraintStart_toStartOf="@+id/fieldApellidoNombre"
        app:layout_constraintTop_toBottomOf="@+id/fieldApellidoNombre" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/fieldEmail"
        android:textColor="#F3EFEF"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/txtCorreo"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />

    <TextView
        android:id="@+id/txtClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:shadowColor="#F4F2F2"
        android:text="@string/txtClave"
        android:textColor="#F3EBEB"
        app:layout_constraintStart_toStartOf="@+id/fieldEmail"
        app:layout_constraintTop_toBottomOf="@+id/fieldEmail" />

    <EditText
        android:id="@+id/fieldClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/fieldClave"
        android:textColor="#F6F2F2"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/txtClave"
        app:layout_constraintTop_toBottomOf="@+id/txtClave" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:shadowColor="#F3ECEC"
        android:text="@string/txtDate"
        android:textColor="#F6F2F2"
        app:layout_constraintStart_toStartOf="@+id/fieldClave"
        app:layout_constraintTop_toBottomOf="@+id/fieldClave" />

    <EditText
        android:id="@+id/fieldDate"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/baseline_date_range_24"
        android:ems="10"
        android:inputType="date"
        android:text="@string/fieldDate"
        android:textColor="#F8F3F3"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/txtDate"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <TextView
        android:id="@+id/txtCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:shadowColor="#F1EAEA"
        android:text="@string/txtCarrera"
        android:textColor="#EAE6E6"
        app:layout_constraintStart_toStartOf="@+id/fieldDate"
        app:layout_constraintTop_toBottomOf="@+id/fieldDate" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/txtCarrera"
        app:layout_constraintTop_toBottomOf="@+id/txtCarrera">

        <RadioButton
            android:id="@+id/rbIS"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/rbIS"
            android:textColor="#FDFCFC" />

        <RadioButton
            android:id="@+id/rbIA"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/rbIA"
            android:textColor="#EAE6E6" />

        <RadioButton
            android:id="@+id/rbIM"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/rbIM"
            android:textColor="#EFE4E4" />

        <RadioButton
            android:id="@+id/rbA"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/rbA"
            android:textColor="#F3EDED" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtPregunta"
        android:textColor="#F8F4F4"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/cbR"
        android:layout_width="121dp"
        android:layout_height="26dp"
        android:text="@string/cbR"
        android:textColor="#F1E6E6"
        app:layout_constraintStart_toStartOf="@+id/txtPregunta"
        app:layout_constraintTop_toBottomOf="@+id/txtPregunta" />

    <CheckBox
        android:id="@+id/cbI"
        android:layout_width="121dp"
        android:layout_height="26dp"
        android:text="@string/cbI"
        android:textColor="#F4EEEE"
        app:layout_constraintStart_toStartOf="@+id/cbR"
        app:layout_constraintTop_toBottomOf="@+id/cbR" />

    <CheckBox
        android:id="@+id/cbA"
        android:layout_width="121dp"
        android:layout_height="26dp"
        android:text="@string/cbA"
        android:textColor="#F4DADA"
        app:layout_constraintStart_toStartOf="@+id/cbI"
        app:layout_constraintTop_toBottomOf="@+id/cbI" />

    <CheckBox
        android:id="@+id/cbP"
        android:layout_width="121dp"
        android:layout_height="26dp"
        android:text="@string/cbP"
        android:textColor="#FDF8F8"
        app:layout_constraintStart_toStartOf="@+id/cbA"
        app:layout_constraintTop_toBottomOf="@+id/cbA" />

    <Button
        android:id="@+id/BtnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:drawableLeft="@drawable/baseline_send_24"
        android:text="@string/BtnEnviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>